<resources>
    <string name="app_name">My Application</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password:</string>
    <string name="confirm">Confirm:</string>
    <string name="numbah_1_in_security">Numbah 1 in Security!</string>
    <string name="welcome_to_da_nnumbah_1_in_security">Welcome to da \nNUMBAH 1 IN SECURITY!</string>
    <string name="password_title">Passwords</string>
    <string name="antivirus">Antivirus</string>
    <string name="my_account">My Account</string>
    <string name="save">Save</string>
    <string name="delete">delete</string>
    <string name="yes">You have scanned your device before T.T!</string>
    <string name="yess">Your last scan was on</string>
    <string name="url">riY7X364cRuGSehX9D5+XZxMLHUew7QSjxGHFPjDQigIH/aRIhZBv3STDZs0KyiS</string>
    <string name="log">TApcLQ6qjz5fXTBteqHX/Q==</string>
</resources>