<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:background="@drawable/background">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:layout_gravity="center"
        android:padding="20dp"
        android:background="@color/white">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_da_nnumbah_1_in_security"
            android:textColor="#888888"
            android:textSize="20sp"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="#888888"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginEnd="11dp"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/username"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:paddingStart="5dp"
                android:maxLines="1"
                android:inputType="text"
                android:background="@color/dark_white"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#888888"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginEnd="10dp"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:paddingStart="5dp"
                android:inputType="textPassword"
                android:background="@color/dark_white"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:textColor="#888888"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginEnd="23dp"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/confirm"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:paddingStart="5dp"
                android:inputType="textPassword"
                android:background="@color/dark_white"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:gravity="center">
            <Button
                android:id="@+id/login"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/login"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@drawable/orange_button"
                android:textAllCaps="false"
                android:layout_marginEnd="10dp"/>
            <Button
                android:id="@+id/register"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/register"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:background="@drawable/green_button" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>
