<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingBottom="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="URL:"
            android:textColor="@color/dark_white"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center_vertical"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="25dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:inputType="textUri"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
            <ImageButton
                android:id="@+id/launch"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="25dp"
                android:layout_gravity="end"
                android:background="@drawable/launch"/>
        </FrameLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/username"
            android:textColor="@color/dark_white"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center_vertical"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="25dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
            <ImageButton
                android:id="@+id/copy_user"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="25dp"
                android:layout_gravity="end"
                android:background="@drawable/copy"/>
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/password"
            android:textColor="@color/dark_white"
            android:labelFor="@id/password"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center_vertical"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:paddingEnd="25dp">
               <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/copy_password"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="8dp"
                android:layout_gravity="end"
                android:background="@drawable/copy" />
        </FrameLayout>

    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="bottom|right"
        android:orientation="horizontal">
        <Button
            android:id="@+id/cancell"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="Cancel"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="15sp"
            android:background="@color/white"
            android:textColor="@color/green"/>
        <Button
            android:id="@+id/delete"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/delete"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/green"
            android:background="@color/white" />
        <Button
            android:id="@+id/save"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/save"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/green"
            android:background="@color/white"/>
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>